# NewCode

./: Readme.txt
NewNode/TestSTL/Test1/: CMakeLists.txt
NewNode/TestSTL/Test1/src/: CommContainer.hpp  Feature_17.hpp  Feature_modern.hpp  FriendClass.hpp  MultiTemp.hpp  TestAlgorithm.hpp  TestChrono.hpp  TestCondVariable.hpp  TestTemplate.hpp  feature_containers.hpp  main.cpp
NewNode/TestSTL/Test2/: CMakeLists.txt  main.cpp
NewNode/TestSTL/Test2/src/: CommStruct.h  PtkConfs.cpp  PtkConfs.h  Singleton.h  TaskWithTimeControl.cpp  TaskWithTimeControl.h  TimeInterval.h  Utility.cpp  Utility.h
NewNode/UnitTest/UnitTestFrame/: TestCommon.h  UnitTest.cpp
NewNode/UnitTest/cases/Test2/: CMakeLists.txt  main.cpp
NewNode/UnitTest/cases/Test2/cases/: Case1.hpp  Case2.hpp
NewNode/source/Datastruct/: DataDef_HQ.h  DataType.cpp  DataType.h  ErrorDef.h  GateDataStru.cpp  GateDataStru.h  ResPool.h  UFDataType.h
NewNode/source/comm/: comm_inc.h
NewNode/source/utility/: unicode_trans.cpp  unicode_trans.h
NewNode/trunk/MiddleMessageModule/: CMakeLists.txt
NewNode/trunk/MiddleMessageModule/src/: Define.h  MDLL_API.cpp  MDLL_API.rc  PB_API.h  Version.h
NewNode/trunk/MiniHttpClient/: CMakeLists.txt
NewNode/trunk/MiniHttpClient/src/: http_client.cpp  http_client.h  main.cpp
NewNode/trunk/MiniHttpServer/: CMakeLists.txt
NewNode/trunk/MiniHttpServer/resource/: index.html
NewNode/trunk/MiniHttpServer/src/: http_sever.cpp  http_sever.h  main.cpp
